# colliding_automata

./: .gitignore  Cargo.toml  README.md  coliding_automata-6e8acfd166107c9c.js  flake.nix  index.html  rust-toolchain.toml
.github/workflows/: pages.yml
assets/shaders/: game_of_life.wgsl
src/: main.rs
