[package]
name = "coliding_automata"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.15", default-features = false, features=[
  "webgpu",
  
  # DEFAULT FEATURES
  ##################
  # "android_shared_stdcxx", 	
  # "animation", 	
  # "bevy_animation", 	
  "bevy_asset", 	
  # "bevy_audio", 	
  "bevy_color", 	
  "bevy_core_pipeline", 	
  # "bevy_gilrs", 	
  # "bevy_gizmos", 	
  # "bevy_gltf", 	
  # "bevy_pbr", 	
  "bevy_render", 	
  # "bevy_scene", 	
  "bevy_sprite", 	
  # "bevy_state", 	
  # "bevy_text", 	
  # "bevy_ui", 	
  "bevy_window",
  "bevy_winit", 	
  # "default_font", 	
  "hdr", 	
  # "ktx2", 	
  # "multi_threaded", 	
  # "png", 	
  # "smaa_luts", 	
  # "tonemapping_luts", 	
  # "vorbis", 	
  # "webgl2", 	
  # "x11",
  # "zstd"
]}
bevy_egui = {version = "0.31.1", default-features=false, features=[  
    "default_fonts",
    # "manage_clipboard",
    # "open_url",
    "render",
]}
bevy_embedded_assets = {version = "0.12.0", default-features=false, features=[
  "default-source"
]}

[profile.release]
opt-level = 'z' # smallest
lto = "thin" # makes smaller, increases compile time moderately
strip = true
